adapted for new assignment

--- a/p1/Makefile
+++ b/p1/Makefile
@@ -9,8 +9,8 @@ CFLAGS = -g -Wall -pedantic -std=gnu99
 
 all:  trace
 
-trace: trace.c checksum.c
-	$(CC) $(CFLAGS) -o $@ trace.c checksum.c $(LIBS)
+trace: trace.c checksum.c utility.c
+	$(CC) $(CFLAGS) -o $@ trace.c checksum.c utility.c $(LIBS)
 
 clean:
 	rm -f trace
