--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -51,6 +51,31 @@
                 "ignoreFailures": true
             }
         ]
+    },
+
+    {
+        "name": "(gdb) old P2 Client",
+        "type": "cppdbg",
+        "request": "launch",
+        "program": "${workspaceFolder}/project2/cclient",
+        "args": ["client1", "localhost", "54321"],
+        "stopAtEntry": false,
+        "cwd": "${fileDirname}",
+        "environment": [],
+        "externalConsole": false,
+        "MIMode": "gdb",
+        "setupCommands": [
+            {
+                "description": "Enable pretty-printing for gdb",
+                "text": "-enable-pretty-printing",
+                "ignoreFailures": true
+            },
+            {
+                "description": "Set Disassembly Flavor to Intel",
+                "text": "-gdb-set disassembly-flavor intel",
+                "ignoreFailures": true
+            }
+        ]
     }
     ],
     "inputs": [
