removed unneded files and wrote windowBuffer logic

--- a/project3/Makefile
+++ b/project3/Makefile
@@ -9,29 +9,19 @@ CC= gcc
 CFLAGS= -g -Wall
 LIBS = 
 
-OBJS = networks.o gethostbyname.o pollLib.o safeUtil.o
+OBJS = networks.o gethostbyname.o pollLib.o safeUtil.o windowBuffer.o packet.o
 
 #uncomment next two lines if your using sendtoErr() library
 LIBS += libcpe464.2.21.a -lstdc++ -ldl
 CFLAGS += -D__LIBCPE464_
 
+all: rcopy server
 
-all: udpAll
+rcopy: rcopy.c $(OBJS) 
+	$(CC) $(CFLAGS) -o rcopy rcopy.c $(OBJS) $(LIBS)
 
-udpAll: udpClient udpServer
-tcpAll: myClient myServer
-
-udpClient: udpClient.c $(OBJS) 
-	$(CC) $(CFLAGS) -o udpClient udpClient.c $(OBJS) $(LIBS)
-
-udpServer: udpServer.c $(OBJS) 
-	$(CC) $(CFLAGS) -o udpServer udpServer.c  $(OBJS) $(LIBS)
-
-myClient: myClient.c $(OBJS)
-	$(CC) $(CFLAGS) -o myClient myClient.c  $(OBJS) $(LIBS)
-
-myServer: myServer.c $(OBJS)
-	$(CC) $(CFLAGS) -o myServer myServer.c $(OBJS) $(LIBS)
+server: server.c $(OBJS) 
+	$(CC) $(CFLAGS) -o server server.c  $(OBJS) $(LIBS)
 
 .c.o:
 	gcc -c $(CFLAGS) $< -o $@ $(LIBS)
@@ -40,7 +30,7 @@ cleano:
 	rm -f *.o
 
 clean:
-	rm -f myServer myClient udpClient udpServer *.o
+	rm -f server rcopy *.o
 
 
 
