--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,6 +5,64 @@
     "version": "0.2.0",
     "configurations": [
         {
+            "name": "(gdb) server",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/project3/server",
+            "args": [
+                "0.5"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(gdb) rcopy",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/project3/rcopy",
+            "args": [
+                "yourfile.txt",
+                "myfile.txt",
+                "123",
+                "4567",
+                "0.5",
+                "localhost",
+                "33604"
+            ],
+            "stopAtEntry": false,
+            "cwd": "${fileDirname}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                },
+                {
+                    "description": "Set Disassembly Flavor to Intel",
+                    "text": "-gdb-set disassembly-flavor intel",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
             "name": "(gdb) WindowTests",
             "type": "cppdbg",
             "request": "launch",
