--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,172 +1,216 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "(gdb) server",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/project3/server",
-            "args": [
-                "0.5"
-            ],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "Set Disassembly Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ]
-        },
-        {
-            "name": "(gdb) rcopy",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/project3/rcopy",
-            "args": [
-                "yourfile.txt",
-                "myfile.txt",
-                "123",
-                "4567",
-                "0.5",
-                "localhost",
-                "35326"
-            ],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "Set Disassembly Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ]
-        },
-        {
-            "name": "(gdb) WindowTests",
-            "type": "cppdbg",
-            "request": "launch",
-            "program": "${workspaceFolder}/project3/windowTests",
-            "args": [],
-            "stopAtEntry": false,
-            "cwd": "${fileDirname}",
-            "environment": [],
-            "externalConsole": false,
-            "MIMode": "gdb",
-            "setupCommands": [
-                {
-                    "description": "Enable pretty-printing for gdb",
-                    "text": "-enable-pretty-printing",
-                    "ignoreFailures": true
-                },
-                {
-                    "description": "Set Disassembly Flavor to Intel",
-                    "text": "-gdb-set disassembly-flavor intel",
-                    "ignoreFailures": true
-                }
-            ]
-        },
+	// Use IntelliSense to learn about possible attributes.
+	// Hover to view descriptions of existing attributes.
+	// For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+	"version": "0.2.0",
+	"configurations": [
+		{
+			"name": "Attach to Server",
+			"type": "cppdbg",
+			"request": "attach",
+			"program": "${workspaceFolder}/project3/server",
+			"processId": "${input:serverPid}",
+			"MIMode": "gdb",
+			"setupCommands": [
+			{
+				"description": "Enable pretty-printing for gdb",
+				"text": "-enable-pretty-printing",
+				"ignoreFailures": true
+			},
+			{
+				"description": "Set Disassembly Flavor to Intel",
+				"text": "-gdb-set disassembly-flavor intel",
+				"ignoreFailures": true
+			}
+			],
+			"preLaunchTask": "Run Server Script",
+			"postDebugTask": "Kill Server Process"
+		},
+		{
+			"name": "Debug Server",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/project3/server",
+			"args": [
+				"0.5"
+			],
+			"stopAtEntry": false,
+			"cwd": "${fileDirname}",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "gdb",
+			"setupCommands": [
+				{
+				"description": "Enable pretty-printing for gdb",
+				"text": "-enable-pretty-printing",
+				"ignoreFailures": true
+				},
+				{
+				"description": "Set Disassembly Flavor to Intel",
+				"text": "-gdb-set disassembly-flavor intel",
+				"ignoreFailures": true
+				}
+			]
+		},
+		{
+			"name": "Debug rcopy",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/project3/rcopy",
+			"args": [
+				"yourfile.txt",
+				"myfile.txt",
+				"123",
+				"4567",
+				"0.5",
+				"localhost",
+				"${input:serverPort}"
+			],
+			"stopAtEntry": false,
+			"cwd": "${fileDirname}",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "gdb",
+			"setupCommands": [
+				{
+				"description": "Enable pretty-printing for gdb",
+				"text": "-enable-pretty-printing",
+				"ignoreFailures": true
+				},
+				{
+				"description": "Set Disassembly Flavor to Intel",
+				"text": "-gdb-set disassembly-flavor intel",
+				"ignoreFailures": true
+				}
+			]
+		},
+		{
+			"name": "(gdb) WindowTests",
+			"type": "cppdbg",
+			"request": "launch",
+			"program": "${workspaceFolder}/project3/windowTests",
+			"args": [],
+			"stopAtEntry": false,
+			"cwd": "${fileDirname}",
+			"environment": [],
+			"externalConsole": false,
+			"MIMode": "gdb",
+			"setupCommands": [
+				{
+					"description": "Enable pretty-printing for gdb",
+					"text": "-enable-pretty-printing",
+					"ignoreFailures": true
+				},
+				{
+					"description": "Set Disassembly Flavor to Intel",
+					"text": "-gdb-set disassembly-flavor intel",
+					"ignoreFailures": true
+				}
+			]
+		},
 
-    {
-        "name": "(gdb) P2 Server",
-        "type": "cppdbg",
-        "request": "launch",
-        "program": "${workspaceFolder}/p2/server",
-        "args": [],
-        "stopAtEntry": false,
-        "cwd": "${fileDirname}",
-        "environment": [],
-        "externalConsole": false,
-        "MIMode": "gdb",
-        "setupCommands": [
-            {
-                "description": "Enable pretty-printing for gdb",
-                "text": "-enable-pretty-printing",
-                "ignoreFailures": true
-            },
-            {
-                "description": "Set Disassembly Flavor to Intel",
-                "text": "-gdb-set disassembly-flavor intel",
-                "ignoreFailures": true
-            }
-        ]
-    },
-    {
-        "name": "(gdb) P2 Client",
-        "type": "cppdbg",
-        "request": "launch",
-        "program": "${workspaceFolder}/p2/cclient",
-        "args": ["localhost", "${input:portPrompt}"],
-        "stopAtEntry": false,
-        "cwd": "${fileDirname}",
-        "environment": [],
-        "externalConsole": false,
-        "MIMode": "gdb",
-        "setupCommands": [
-            {
-                "description": "Enable pretty-printing for gdb",
-                "text": "-enable-pretty-printing",
-                "ignoreFailures": true
-            },
-            {
-                "description": "Set Disassembly Flavor to Intel",
-                "text": "-gdb-set disassembly-flavor intel",
-                "ignoreFailures": true
-            }
-        ]
-    },
+	{
+		"name": "(gdb) P2 Server",
+		"type": "cppdbg",
+		"request": "launch",
+		"program": "${workspaceFolder}/p2/server",
+		"args": [],
+		"stopAtEntry": false,
+		"cwd": "${fileDirname}",
+		"environment": [],
+		"externalConsole": false,
+		"MIMode": "gdb",
+		"setupCommands": [
+			{
+				"description": "Enable pretty-printing for gdb",
+				"text": "-enable-pretty-printing",
+				"ignoreFailures": true
+			},
+			{
+				"description": "Set Disassembly Flavor to Intel",
+				"text": "-gdb-set disassembly-flavor intel",
+				"ignoreFailures": true
+			}
+		]
+	},
+	{
+		"name": "(gdb) P2 Client",
+		"type": "cppdbg",
+		"request": "launch",
+		"program": "${workspaceFolder}/p2/cclient",
+		"args": ["localhost", "${input:portPrompt}"],
+		"stopAtEntry": false,
+		"cwd": "${fileDirname}",
+		"environment": [],
+		"externalConsole": false,
+		"MIMode": "gdb",
+		"setupCommands": [
+			{
+				"description": "Enable pretty-printing for gdb",
+				"text": "-enable-pretty-printing",
+				"ignoreFailures": true
+			},
+			{
+				"description": "Set Disassembly Flavor to Intel",
+				"text": "-gdb-set disassembly-flavor intel",
+				"ignoreFailures": true
+			}
+		]
+	},
 
-    {
-        "name": "(gdb) old P2 Client",
-        "type": "cppdbg",
-        "request": "launch",
-        "program": "${workspaceFolder}/project2/cclient",
-        "args": ["client1", "localhost", "54321"],
-        "stopAtEntry": false,
-        "cwd": "${fileDirname}",
-        "environment": [],
-        "externalConsole": false,
-        "MIMode": "gdb",
-        "setupCommands": [
-            {
-                "description": "Enable pretty-printing for gdb",
-                "text": "-enable-pretty-printing",
-                "ignoreFailures": true
-            },
-            {
-                "description": "Set Disassembly Flavor to Intel",
-                "text": "-gdb-set disassembly-flavor intel",
-                "ignoreFailures": true
-            }
-        ]
-    }
-    ],
-    "inputs": [
-        {
-          "id": "portPrompt",
-          "type": "promptString",
-          "description": "Enter Port Number",
-          "default": ""
-        }
-    ]
+	{
+		"name": "(gdb) old P2 Client",
+		"type": "cppdbg",
+		"request": "launch",
+		"program": "${workspaceFolder}/project2/cclient",
+		"args": ["client1", "localhost", "54321"],
+		"stopAtEntry": false,
+		"cwd": "${fileDirname}",
+		"environment": [],
+		"externalConsole": false,
+		"MIMode": "gdb",
+		"setupCommands": [
+			{
+				"description": "Enable pretty-printing for gdb",
+				"text": "-enable-pretty-printing",
+				"ignoreFailures": true
+			},
+			{
+				"description": "Set Disassembly Flavor to Intel",
+				"text": "-gdb-set disassembly-flavor intel",
+				"ignoreFailures": true
+			}
+		]
+	}
+	],
+	"inputs": [
+		{
+		  "id": "portPrompt",
+		  "type": "promptString",
+		  "description": "Enter Port Number",
+		  "default": ""
+		},
+		{
+			"id": "serverPid",
+			"type": "command",
+			"command": "extension.commandvariable.file.content",
+			"args": {
+			  "fileName": "${workspaceFolder}/project3/.server_pid"
+			}
+		},
+		{
+			"id": "serverPort",
+			"type": "command",
+			"command": "extension.commandvariable.file.content",
+			"args": {
+			  "fileName": "${workspaceFolder}/project3/.server_port"
+			}
+		}
+	],
+	"compounds": [
+		{
+		  "name": "Debug Server and rcopy",
+		  "configurations": ["Debug Server", "Debug rcopy"]
+		}
+	]
 }
