--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "label": "Run Server Script",
       "type": "shell",
-      "command": "${workspaceFolder}/project3/launch_server.sh && sleep 1",
+      "command": "${workspaceFolder}/project3/launch_server.sh",
       "args": [
         "0.5"
       ],
