--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,7 @@
         "in.h": "c",
         "window.h": "c",
         "gethostbyname.h": "c",
-        "networks.h": "c"
+        "networks.h": "c",
+        "time.h": "c"
     }
 }
